Fixed react select in popover been cropped

--- a/datahub/webapp/ui/Popover/Popover.scss
+++ b/datahub/webapp/ui/Popover/Popover.scss
@@ -51,6 +51,5 @@
         position: relative;
         min-width: 20px;
         min-height: 20px;
-        overflow: hidden;
     }
 }
